# Serkr

./: .gitignore  .travis.yml  Cargo.toml  README.md  clippy.toml  notes.txt  rustfmt.toml
examples/: ALG211+1.p  ANA002-2.p  ANA002-4.p  CAT001-3.p  CAT002-3.p  CAT003-0.ax  CAT015-3.p  COM003-2.p  GEO003-0.ax  GEO076-4.p  GRP001-2.p  GRP004-0.ax  GRP012-4.p  GRP707-1.p  HWC001-1.p  NUM016-1.p  RNG005-0.ax  RNG009-5.p  RNG009-7.p  SET004-0.ax  SET013-4.p  SET060-6.p  SWV236+1.p  SWV237+1.p  TOP001-2.p
scripts/: analyze.py
src/: main.rs
src/cnf/: ast.rs  ast_transformer.rs  ast_transformer_internal.rs  ast_transformer_tptp.rs  distribute_ors_over_ands.rs  drop_universal_quantifiers.rs  formula_renaming.rs  free_variables.rs  miniscoping.rs  mod.rs  naive_cnf.rs  nnf.rs  pull_out_quantifiers.rs  rename.rs  renaming_info.rs  simplify.rs  skolemize.rs  standard_cnf.rs  standard_skolemization.rs  variable_renaming.rs
src/parser/: fol_grammar.rustpeg  formula.rs  grammar.rs  internal_parser.rs  internal_parser_grammar.lalrpop  mod.rs  parser.rs  pratt.rs  token.rs  tokenizer.rs
src/prover/: clause.rs  duplicate_deletion.rs  equality_factoring.rs  equality_resolution.rs  factoring.rs  kbo.rs  (+21 more)
test_problems/: SYN000+0.ax  SYN000+1.p  SYN000-0.ax  SYN000-1.p  davis_putnam.p  djikstra.p  djikstra_negated.p  ewd.p  group_left_inverse_means_right_inverse.p  los.p  p1.p  p10.p  p11.p  p12.p  p13.p  p14.p  p15e.p  p15o.p  p16.p  p17.p  p18.p  p18n.p  p19.p  p1n.p  p2.p  p20.p  p21.p  p22.p  p22n.p  p23.p  p24.p  p25.p  p26.p  p27.p  p28e.p  p28o.p  p29.p  p3.p  p30.p  p30n.p  (+46 more)
(+78 files in other folders)
