[package]
name = "serkr"
version = "0.1.0"
authors = ["Mikko Aarnos <mikko.aarnos@gmail.com>"]

exclude = ["examples/*"]

build = "build.rs" 

[build-dependencies.lalrpop]
version = "*"

[dependencies.lalrpop-util]
version = "*"

[dependencies.time]
version = "*"

[dependencies.regex]
version = "*"

[dependencies.clap]
version = "*"

[dependencies.clippy]
version = "*"
optional = true

